[project]

name = "pyri-program-master"
version = "0.3.0"
description = "PyRI Teach Pendant Program Master"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["pyodide", "pyri-project", "pyri-runtime-package", "robotics"]
authors = [
    {name = "John Wason", email = "wason@wasontech.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering"
]

dependencies = [
    'pyri-common',
    'pyri-device-manager',
    'pyri-sandbox',
    'RobotRaconteur>=1.2.0',
    'RobotRaconteurCompanion>=0.4.0',
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio"
]

[project.urls]
homepage="http://pyri.tech"
repository="https://github.com/pyri-project/pyri-program-master"

[project.scripts]
pyri-program-master-service = "pyri.program_master.__main__:main"

[project.entry-points."pyri.plugins.robdef"]
pyri-program-master-robdef = "pyri.program_master.robdef:get_robdef_factory"

[project.entry-points."pyri.plugins.service_node_launch"]
pyri-program-master-launch = "pyri.program_master.service_node_launch:get_service_node_launch_factory"

[project.entry-points."pyri.plugins.device_type_adapter"]
pyri-program-master-type-adapter = "pyri.program_master.device_type_adapter:get_device_type_adapter_factory"

[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools',
    'toml',
]

[tool.setuptools.package-data]
'pyri.program_master' = ['*.robdef','*.yml']